更新内容 + Action 自动部署

--- a/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
+++ b/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
@@ -33,11 +33,11 @@ tags:
 
 ![image-20220103180058191](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220103180059.png)
 
-本站的访问量和文章的浏览量使用了 **不蒜子插件**，因为不蒜子利用域名来统计访问量，所以本地 localhost 肯定有很多人访问过，即本地编译后的首页访问量会很多，所以无需担心实际部署后的访问量。
+本站的访问量和文章的浏览量使用了 **不蒜子**，因为不蒜子利用域名来统计访问量，所以本地 localhost 肯定有很多人访问过，即本地编译后的首页访问量会很多，所以无需担心实际部署后的访问量。
 
-不蒜子官网地址：<http://busuanzi.ibruce.info/>
+[不蒜子官网地址](http://busuanzi.ibruce.info/)
 
-不蒜子文档地址：<http://ibruce.info/2015/04/04/busuanzi/>
+[不蒜子文档地址](http://ibruce.info/2015/04/04/busuanzi/)
 
 ::: warning
 
@@ -50,26 +50,6 @@ tags:
 2022-01-17 @Young Kbt
 
 :::
-
-## 安装依赖
-
-官网推荐引入在线脚本，但是在 Vue 里，单页面跳转不会重新触发在线脚本，也就不会获取访问量。在线脚本仅在第一次加载页面时被触发，或者刷新网页被触发。所以会发现从一个文章跳转到另一个文章，另一个文章的浏览量是不会变化的，除非刷新页面。
-
-因此这里安装不蒜子依赖，利用 Vue 的 `Router` 监听路由的变化，一旦改变则重新触发不蒜子依赖，从而重新拉取访问量，解决上述的问题。
-
-直接在自己的项目安装依赖即可。
-
-- yarn 安装
-
-```sh
-yarn add busuanzi.pure.js -D
-```
-
-- npm 安装
-
-```sh
-npm install busuanzi.pure.js --save
-```
 
 ## 添加meta
 
@@ -150,14 +130,16 @@ export default {
 
 下面有两种配置方式可以选，分别为：
 
-- 在线主题：NPM 主题，采用监听路由、插入式的代码，所以视觉上会发现 500ms - 1000ms 左右出现渲染到页面上，目前我正在使用
-- 本地主题：站点信息模块没有延迟，与页面一起渲染出来
+- 在线主题：NPM 主题，采用监听路由、插入式的代码
+- 本地主题：站点信息模块与页面一起渲染出来，没有延迟
 
-本地主题不好的一点就是升级版本后曾修改的内容被重置，所以需要记好修改位置、备份，比较麻烦。好处是根据自己的需求在基础上拓展。
+本地主题不好的一点就是版本升级后曾修改的内容被重置，所以需要记好修改位置、备份，比较麻烦。好处是根据自己的需求在基础上拓展。
+
+**在线主题具有通用性，即在任意环境（如本地主题）也起效果。**
 
 ## 在线主题
 
-如果你正在使用在线的主题，即不使用本地主题，那么在本内容开始我们的站点信息配置吧。
+不管使不使用本地主题，都可以配置在线主题的站点模块。
 
 ### 网站信息工具代码
 
@@ -167,7 +149,121 @@ export default {
 
 ![image-20220101192402636](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220101192403.png)
 
-然后在 webSiteInfo 目录下创建 `readFile.js` 文件，这个文件用于 <mark>统计文章数目</mark> 和 <mark>网站总字数</mark> 等。
+然后在 webSiteInfo 目录下创建 `busuanzi.js` 文件，这个文件用于 <mark>获取访问量</mark>。
+
+```js
+var bszCaller, bszTag, scriptTag, ready;
+
+var t,
+  e,
+  n,
+  a = !1,
+  c = [];
+
+// 修复Node同构代码的问题
+if (typeof document !== "undefined") {
+  (ready = function (t) {
+    return (
+      a ||
+      "interactive" === document.readyState ||
+      "complete" === document.readyState
+        ? t.call(document)
+        : c.push(function () {
+            return t.call(this);
+          }),
+      this
+    );
+  }),
+    (e = function () {
+      for (var t = 0, e = c.length; t < e; t++) c[t].apply(document);
+      c = [];
+    }),
+    (n = function () {
+      a ||
+        ((a = !0),
+        e.call(window),
+        document.removeEventListener
+          ? document.removeEventListener("DOMContentLoaded", n, !1)
+          : document.attachEvent &&
+            (document.detachEvent("onreadystatechange", n),
+            window == window.top && (clearInterval(t), (t = null))));
+    }),
+    document.addEventListener
+      ? document.addEventListener("DOMContentLoaded", n, !1)
+      : document.attachEvent &&
+        (document.attachEvent("onreadystatechange", function () {
+          /loaded|complete/.test(document.readyState) && n();
+        }),
+        window == window.top &&
+          (t = setInterval(function () {
+            try {
+              a || document.documentElement.doScroll("left");
+            } catch (t) {
+              return;
+            }
+            n();
+          }, 5)));
+}
+
+bszCaller = {
+  fetch: function (t, e) {
+    var n = "BusuanziCallback_" + Math.floor(1099511627776 * Math.random());
+    t = t.replace("=BusuanziCallback", "=" + n);
+    (scriptTag = document.createElement("SCRIPT")),
+      (scriptTag.type = "text/javascript"),
+      (scriptTag.defer = !0),
+      (scriptTag.src = t),
+      document.getElementsByTagName("HEAD")[0].appendChild(scriptTag);
+    window[n] = this.evalCall(e);
+  },
+  evalCall: function (e) {
+    return function (t) {
+      ready(function () {
+        try {
+          e(t),
+            scriptTag &&
+              scriptTag.parentElement &&
+              scriptTag.parentElement.removeChild &&
+              scriptTag.parentElement.removeChild(scriptTag);
+        } catch (t) {
+          console.log(t), bszTag.hides();
+        }
+      });
+    };
+  },
+};
+
+export default fetch = () => {
+  bszTag && bszTag.hides();
+  bszCaller.fetch("//busuanzi.ibruce.info/busuanzi?jsonpCallback=BusuanziCallback", function (t) {
+    bszTag.texts(t), bszTag.shows();
+  })
+};
+
+bszTag = {
+  bszs: ["site_pv", "page_pv", "site_uv"],
+  texts: function (n) {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_value_" + t);
+      e && (e.innerHTML = n[t]);
+    });
+  },
+  hides: function () {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_container_" + t);
+      e && (e.style.display = "none");
+    });
+  },
+  shows: function () {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_container_" + t);
+      e && (e.style.display = "inline");
+    });
+  },
+};
+```
+
+然后创建 `readFile.js` 或者 `readFile.ts` 文件，这个文件用于 <mark>统计文章数目</mark> 和 <mark>网站总字数</mark> 等。
 
 添加如下内容：
 
@@ -464,7 +560,7 @@ export {
 
 
 
-接着继续在该目录下创建第二个文件 `utils.js`，该文件用于计算 <mark>已运行时间</mark> 和 <mark>最后活动时间</mark>。
+接着继续在该目录下创建第三个文件 `utils.js`，该文件用于计算 <mark>已运行时间</mark> 和 <mark>最后活动时间</mark>。
 
 添加如下内容：
 
@@ -567,46 +663,11 @@ export function getDays(mouth, year) {
   }
   return days;
 }
-
-/**
- * 已运行时间低于一天显示时分秒
- * 目前该函数没有使用，低于一天直接显示不到一天
- */
-export function getTime(startDate, endDate) {
-  if (day < 0) {
-    let hour = parseInt(Math.abs(new Date(startDate) - new Date(endDate)) / (1000 * 60 * 60));
-    if (hour > 0) {
-      let minute = parseInt(Math.abs(new Date(startDate) - new Date(endDate) - hour * 60 * 60 * 1000) / (1000 * 60));
-      if (minute > 0) {
-        let second = parseInt(Math.abs(new Date(startDate) - new Date(endDate) - hour * 60 * 60 * 1000 - minute * 60 * 1000) / (1000));
-        if (second != 0) {
-          return hour + ' 小时 ' + minute + ' 分钟 ' + second + ' 秒';
-        } else {
-          return hour + ' 小时 ' + minute + ' 分钟 ';
-        }
-      } else {
-        return hour + ' 小时 ';
-      }
-    } else {
-      let minute = parseInt(Math.abs(new Date(startDate) - new Date(endDate) - hour * 60 * 60 * 1000) / (1000 * 60));
-      if (minute > 0) {
-        let second = parseInt(Math.abs(new Date(startDate) - new Date(endDate) - hour * 60 * 60 * 1000 - minute * 60 * 1000) / (1000));
-        if (second != 0) {
-          return + minute + ' 分钟 ' + second + ' 秒';
-        } else {
-          return minute + ' 分钟 ';
-        }
-      } else {
-        return parseInt(Math.abs(new Date(startDate) - new Date(endDate) - hour * 60 * 60 * 1000 - minute * 60 * 1000) / (1000)) + ' 秒 ';
-      }
-    }
-  }
-}
 ```
 
-目前就两个文件，最终效果如图：
+目前就三个文件，最终效果如图：
 
-![image-20220101192823081](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220101192824.png)
+![image-20220607184317549](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220607184319.png)
 
 ### 站点信息代码
 
@@ -681,7 +742,7 @@ export function getTime(startDate, endDate) {
 
 <script>
 import { dayDiff, timeDiff, lastUpdatePosts } from "../webSiteInfo/utils";
-let busuanzi; // 统计量
+import fetch from "../webSiteInfo/busuanzi"; // 统计量
 export default {
   data() {
     return {
@@ -733,7 +794,7 @@ export default {
       } else if (totalWords == "archives") {
         this.totalWords = 0;
         console.log(
-          "如果 totalWords 使用 archives，必须传入 eachFileWords，显然您并没有传入！"
+          "如果 totalWords = 'archives'，必须传入 eachFileWords，显然您并没有传入！"
         );
       } else {
         this.totalWords = totalWords;
@@ -781,38 +842,55 @@ export default {
      * 首页的统计量
      */
     getIndexViewCouter(iterationTime = 3000) {
-      if (busuanzi) {
-        busuanzi.fetch();
-      } else {
-        busuanzi = require("busuanzi.pure.js");
-      }
+      fetch();
       var i = 0;
       var defaultCouter = "9999";
-      // 如果 require 没有获取成功，则手动获取
-      // 但是容易产生访问量叠加，如果只需要第一次获取数据（可能获取失败），可注释掉，此内容是第一次获取失败后，重新获取访问量，可能导致访问量再次 + 1
-      // 取决于访问人的网络，以及 setTimeout 的时间（需求调节）
+      // 如果只需要第一次获取数据（可能获取失败），可注释掉 setTimeout 内容，此内容是第一次获取失败后，重新获取访问量
+      // 可能会导致访问量再次 + 1 原因：取决于 setTimeout 的时间（需求调节），setTimeout 太快导致第一个获取的数据没返回，就第二次获取，导致结果返回 + 2 的数据
       setTimeout(() => {
-        let interval = setInterval(() => {
-          const indexUv = document.querySelector(".web-site-pv");
-          const indexPv = document.querySelector(".web-site-uv");
-          if (indexPv || indexUv) {
-            i += iterationTime;
-            if (i > iterationTime * 10) {
-              indexPv.innerText = defaultCouter;
-              indexUv.innerText = defaultCouter;
-              clearInterval(interval); // 10 秒后无法获取，则取消获取
-            }
-            if (indexPv.innerText == "" && indexUv.innerText == "") {
-              // 手动获取访问量
-              busuanzi.fetch();
+        let indexUv = document.querySelector(".web-site-pv");
+        let indexPv = document.querySelector(".web-site-uv");
+        if (
+          indexPv &&
+          indexUv &&
+          indexPv.innerText == "" &&
+          indexUv.innerText == ""
+        ) {
+          let interval = setInterval(() => {
+            // 再次判断原因：防止进入 setInterval 的瞬间，访问量获取成功
+            if (
+              indexPv &&
+              indexUv &&
+              indexPv.innerText == "" &&
+              indexUv.innerText == ""
+            ) {
+              i += iterationTime;
+              if (i > iterationTime * 5) {
+                indexPv.innerText = defaultCouter;
+                indexUv.innerText = defaultCouter;
+                clearInterval(interval); // 5 次后无法获取，则取消获取
+              }
+              if (indexPv.innerText == "" && indexUv.innerText == "") {
+                // 手动获取访问量
+                fetch();
+              } else {
+                clearInterval(interval);
+              }
             } else {
               clearInterval(interval);
             }
-          } else {
+          }, iterationTime);
+          // 绑定 beforeDestroy 生命钩子，清除定时器
+          this.$once("hook:beforeDestroy", () => {
             clearInterval(interval);
-          }
-        }, iterationTime);
+            interval = null;
+          });
+        }
       }, iterationTime);
+    },
+    created() {
+      let webInfo = document.querySelector(".web-info");
+      webInfo && webInfo.parentNode.removeChild(webInfo);
     },
   },
 };
@@ -856,15 +934,251 @@ export default {
 </style>
 ```
 
+继续创建一个 vue 文件：`PageInfo.vue`，这就是文章页的信息模块：<mark>文章浏览量、字数代码、预阅读时间</mark>。
+
+```vue
+<template></template>
+
+<script>
+import fetch from "../webSiteInfo/busuanzi";
+export default {
+  mounted() {
+    // 首页不初始页面信息
+    if (this.$route.path != "/") {
+      this.initPageInfo();
+    }
+  },
+  watch: {
+    $route(to, from) {
+      // 如果页面是非首页，# 号也会触发路由变化，这里要排除掉
+      if (
+        to.path !== "/" &&
+        to.path !== from.path &&
+        this.$themeConfig.blogInfo
+      ) {
+        this.initPageInfo();
+      }
+    },
+  },
+  methods: {
+    /**
+     * 初始化页面信息
+     */
+    initPageInfo() {
+      if (this.$frontmatter.article == undefined || this.$frontmatter.article) {
+        // 排除掉 article 为 false 的文章
+        const { eachFileWords, pageView, pageIteration, readingTime } =
+          this.$themeConfig.blogInfo;
+        // 下面两个 if 可以调换位置，从而让文章的浏览量和字数交换位置
+        if (eachFileWords) {
+          try {
+            eachFileWords.forEach((itemFile) => {
+              if (itemFile.permalink == this.$frontmatter.permalink) {
+                // this.addPageWordsCount 和 if 可以调换位置，从而让文章的字数和预阅读时间交换位置
+                this.addPageWordsCount(itemFile.wordsCount);
+                if (readingTime || readingTime == undefined) {
+                  this.addReadTimeCount(itemFile.readingTime);
+                }
+                throw new Error();
+              }
+            });
+          } catch (error) {}
+        }
+        if (pageView || pageView == undefined) {
+          this.addPageView();
+          this.getPageViewCouter(pageIteration);
+        }
+        return;
+      }
+    },
+    /**
+     * 文章页的访问量
+     */
+    getPageViewCouter(iterationTime = 3000) {
+      fetch();
+      let i = 0;
+      var defaultCouter = "9999";
+      // 如果只需要第一次获取数据（可能获取失败），可注释掉 setTimeout 内容，此内容是第一次获取失败后，重新获取访问量
+      // 可能会导致访问量再次 + 1 原因：取决于 setTimeout 的时间（需求调节），setTimeout 太快导致第一个获取的数据没返回，就第二次获取，导致结果返回 + 2 的数据
+      setTimeout(() => {
+        let pageView = document.querySelector(".view-data");
+        if (pageView && pageView.innerText == "") {
+          let interval = setInterval(() => {
+            // 再次判断原因：防止进入 setInterval 的瞬间，访问量获取成功
+            if (pageView && pageView.innerText == "") {
+              i += iterationTime;
+              if (i > iterationTime * 5) {
+                pageView.innerText = defaultCouter;
+                clearInterval(interval); // 5 次后无法获取，则取消获取
+              }
+              if (pageView.innerText == "") {
+                // 手动获取访问量
+                fetch();
+              } else {
+                clearInterval(interval);
+              }
+            } else {
+              clearInterval(interval);
+            }
+          }, iterationTime);
+          // 绑定 beforeDestroy 生命钩子，清除定时器
+          this.$once("hook:beforeDestroy", () => {
+            clearInterval(interval);
+            interval = null;
+          });
+        }
+      }, iterationTime);
+    },
+    /**
+     * 添加浏览量元素
+     */
+    addPageView() {
+      let pageView = document.querySelector(".page-view");
+      if (pageView) {
+        pageView.innerHTML =
+          '<a style="color: #888; margin-left: 3px" href="javascript:;" id="busuanzi_value_page_pv" class="view-data"><i title="正在获取..." class="loading iconfont icon-loading"></i></a>';
+      } else {
+        // 创建访问量的元素
+        let template = document.createElement("div");
+        template.title = "浏览量";
+        template.className = "page-view iconfont icon-view";
+        template.style.float = "left";
+        template.style.marginLeft = "20px";
+        template.style.fontSize = "0.8rem";
+        template.innerHTML =
+          '<a style="color: #888; margin-left: 3px" href="javascript:;" id="busuanzi_value_page_pv" class="view-data"><i title="正在获取..." class="loading iconfont icon-loading"></i></a>';
+        // 添加 loading 效果
+        let style = document.createElement("style");
+        style.innerHTML = `@keyframes turn {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      .loading {
+        display: inline-block;
+        animation: turn 1s linear infinite;
+        -webkit-animation: turn 1s linear infinite;
+      }`;
+        document.head.appendChild(style);
+        this.mountedView(template);
+      }
+    },
+    /**
+     * 添加当前文章页的字数元素
+     */
+    addPageWordsCount(wordsCount = 0) {
+      let words = document.querySelector(".book-words");
+      if (words) {
+        words.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${wordsCount}</a>`;
+      } else {
+        let template = document.createElement("div");
+        template.title = "文章字数";
+        template.className = "book-words iconfont icon-book";
+        template.style.float = "left";
+        template.style.marginLeft = "20px";
+        template.style.fontSize = "0.8rem";
+
+        template.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${wordsCount}</a>`;
+        this.mountedView(template);
+      }
+    },
+    /**
+     * 添加预计的阅读时间
+     */
+    addReadTimeCount(readTimeCount = 0) {
+      let reading = document.querySelector(".reading-time");
+      if (reading) {
+        reading.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${readTimeCount}</a>`;
+      } else {
+        let template = document.createElement("div");
+        template.title = "预阅读时长";
+        template.className = "reading-time iconfont icon-shijian";
+        template.style.float = "left";
+        template.style.marginLeft = "20px";
+        template.style.fontSize = "0.8rem";
+        template.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${readTimeCount}</a>`;
+        this.mountedView(template);
+      }
+    },
+    /**
+     * 挂载目标到页面上
+     */
+    mountedView(
+      template,
+      mountedIntervalTime = 100,
+      moutedParentEvent = ".articleInfo-wrap > .articleInfo > .info"
+    ) {
+      let i = 0;
+      let parentElement = document.querySelector(moutedParentEvent);
+      if (parentElement) {
+        if (!this.isMountedView(template, parentElement)) {
+          parentElement.appendChild(template);
+        }
+      } else {
+        let interval = setInterval(() => {
+          parentElement = document.querySelector(moutedParentEvent);
+          if (parentElement) {
+            if (!this.isMountedView(template, parentElement)) {
+              parentElement.appendChild(template);
+              clearInterval(interval);
+            }
+          } else if (i > 1 * 10) {
+            // 10 秒后清除
+            clearInterval(interval);
+          }
+        }, mountedIntervalTime);
+        // 绑定 beforeDestroy 生命钩子，清除定时器
+        this.$once("hook:beforeDestroy", () => {
+          clearInterval(interval);
+          interval = null;
+        });
+      }
+    },
+    /**
+     * 如果元素存在，则删除
+     */
+    removeElement(selector) {
+      var element = document.querySelector(selector);
+      element && element.parentNode.removeChild(element);
+    },
+    /**
+     * 目标是否已经挂载在页面上
+     */
+    isMountedView(element, parentElement) {
+      if (element.parentNode == parentElement) {
+        return true;
+      } else {
+        return false;
+      }
+    },
+  },
+  // 防止重写编译时，导致页面信息重复出现问题
+  created() {
+    clearInterval(this.interval);
+    this.removeElement(".page-view");
+    this.removeElement(".book-words");
+    this.removeElement(".reading-time");
+  },
+};
+</script>
+
+<style></style>
+```
+
 最终效果如图：
 
-![image-20220101193400080](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220101193401.png)
+![image-20220607184354072](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220607184355.png)
 
-创建好了该 vue 组件，我们需要使用它，打开 docs/index.md
+创建好了两个 vue 组件，我们需要使用它们。
+
+> 使用 `WebInfo.vue` 组件
+
+打开 docs/index.md
 
 ![image-20220101193622169](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220101193623.png)
-
-
 
 移到最下方，添加如下内容：
 
@@ -874,205 +1188,44 @@ export default {
 </ClientOnly>
 ```
 
-熟悉 vue 脚手架的人应该都有疑惑，那就是使用 vue 组件前，不需要引入吗？就像 `import xxx from 'xx/xx.vue'` 一样。
+> 使用 `PageInfo.vue` 组件
 
-其实 Vuepress 会自动扫描 .vuepress 是否有 components 目录，如果有并且里面有 .vue 组件，则自动将它们全局注册，所以直接在任何 md 文档按照组件名引入即可。
+在 docs/.vuepress/config.js（新版是 config.ts）的 plugins 中添加配置。
 
-这也告诉我们，可以直接在 components 目录写 vue 组件，然后按照组件名在任意 md 文档引入，即可看到效果。
+:::: tabs :options="{ useUrlFragment: false }"
 
-### 文章浏览量和字数代码
-
-首先进入 docs/.vuepress 目录，打开 enhanceApp.js 文件。该文件可以监听路由，然后 <mark>触发文章浏览量和字数的代码</mark>
+::: tab JS
 
 ```js
-let busuanzi;
-
-export default ({
-  Vue, // VuePress 正在使用的 Vue 构造函数
-  options, // 附加到根实例的一些选项
-  router, // 当前应用的路由实例
-  siteData, // 站点元数据
-  isServer // 当前应用配置是处于 服务端渲染 或 客户端
-}) => {
-  /**
-   * 站点和文章页信息模块
-   */
-  if (!isServer) {
-    router.beforeEach((to, from, next) => {
-      next();
-      if (to.path !== '/' && to.path !== from.path && siteData.themeConfig.blogInfo) {  // 如果页面是非首页，# 号也会触发路由变化，这里已经排除掉
-        // 刷新页面或进入新的页面后，如果原来位置的内容还存在，则删除掉，最后重新插入渲染
-        removeElement('.page-view-js');
-        removeElement('.page-view');
-        removeElement('.book-words');
-        removeElement('.reading-time');
-        siteData.pages.forEach((itemPage) => {
-          if (itemPage.path == to.path) {
-            if (itemPage.frontmatter.article == undefined || itemPage.frontmatter.article) {  // 排除掉 article 为 false 的文章
-              const { eachFileWords, pageView, pageIteration, readingTime } = siteData.themeConfig.blogInfo;
-              // 下面两个 if 可以调换位置，从而让文章的浏览量和字数内容交换
-              if (eachFileWords) {
-                eachFileWords.forEach((itemFile) => {
-                  if (itemFile.permalink == itemPage.frontmatter.permalink) {
-                    addPageWordsCount(itemFile.wordsCount);
-                    if (readingTime || readingTime == undefined) {
-                      addReadTimeCount(itemFile.readingTime);
-                    }
-                  }
-                });
-              }
-              if (pageView || pageView == undefined) {
-                addPageView();
-                // 挂载成功需要一点时间
-                setTimeout(() => {
-                  getPageViewCouter(pageIteration);
-                }, 1500);
-              }
-
-              return;
-            }
-          }
-        })
-      }
-    })
-  }
-}
-/**
- * 如果元素存在，则删除
- */
-function removeElement(selector) {
-  var element = document.querySelector(selector);
-  if (element) {
-    element.parentNode.removeChild(element);
-  }
-}
-
-/**
- * 文章页的访问量
- */
-function getPageViewCouter(iterationTime = 3000) {
-  if (busuanzi) {
-    busuanzi.fetch();
-  } else {
-    busuanzi = require("busuanzi.pure.js");
-  }
-  var i = 0;
-  var defaultCouter = '9999';
-  // 如果 require 没有获取成功，则手动获取
-  // 但是容易产生访问量叠加，如果只需要第一次获取数据（可能获取失败），可注释掉，此内容是第一次获取失败后，重新获取访问量，可能导致访问量再次 + 1
-  // 取决于访问人的网络，以及 setTimeout 的时间（需求调节）
-  setTimeout(() => {
-    let interval = setInterval(() => {
-      const pageView = document.querySelector('.view-data');
-      if (pageView) {
-        i += iterationTime;
-        if (i > iterationTime * 10) {
-          pageView.innerText = defaultCouter;
-          clearInterval(interval);  // 10 秒后无法获取，则取消获取
+module.exports = {
+    plugins: [
+        {
+            name: 'custom-plugins',
+            globalUIComponents: ["PageInfo"] // 2.x 版本 globalUIComponents 改名为 clientAppRootComponentFiles
         }
-        if (pageView.innerText == "") {
-          // 手动获取访问量
-          busuanzi.fetch();
-        } else {
-          clearInterval(interval);
-        }
-      } else {
-        clearInterval(interval);
-      }
-    }, iterationTime);
-  }, iterationTime);
-}
-/**
- * 添加浏览量元素
- */
-function addPageView() {
-  // 创建访问量的元素
-  let template = document.createElement('div');
-  template.title = '浏览量';
-  template.className = 'page-view iconfont icon-view';
-  template.style.float = 'left';
-  template.style.marginLeft = '20px';
-  template.style.fontSize = '0.8rem';
-  // template.innerHTML = '<span id="busuanzi_container_page_pv" style="display: none; margin-left: 3px"><a style="color: #888" href="javascript:;" id="busuanzi_value_page_pv" class="view-data"></a></span>';
-  template.innerHTML = '<a style="color: #888; margin-left: 3px" href="javascript:;" id="busuanzi_value_page_pv" class="view-data"><i title="正在获取..." class="loading iconfont icon-loading"></i></a>';
-  mountedView(template);
-  // 添加 loading 效果
-  let style = document.createElement("style");
-  style.innerHTML = `@keyframes turn {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  .loading {
-    display: inline-block;
-    animation: turn 1s linear infinite;
-    -webkit-animation: turn 1s linear infinite;
-  }`;
-  document.head.appendChild(style);
-}
-/**
- * 添加当前文章页的字数元素
- */
-function addPageWordsCount(wordsCount) {
-  if (wordsCount) {
-    let template = document.createElement('div');
-    template.title = '文章字数';
-    template.className = 'book-words iconfont icon-book';
-    template.style.float = 'left';
-    template.style.marginLeft = '20px';
-    template.style.fontSize = '0.8rem';
-
-    template.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${wordsCount}</a>`;
-    mountedView(template);
-  }
-}
-
-/**
- * 添加预计的阅读时间
- */
-function addReadTimeCount(readTimeCount) {
-  let template = document.createElement('div');
-  template.title = '预阅读时长';
-  template.className = 'reading-time iconfont icon-shijian';
-  template.style.float = 'left';
-  template.style.marginLeft = '20px';
-  template.style.fontSize = '0.8rem';
-  template.innerHTML = `<a href="javascript:;" style="margin-left: 3px; color: #888">${readTimeCount}</a>`;
-  mountedView(template);
-}
-
-/**
- * 挂载目标到页面上
- */
-function mountedView(template, moutedParentEvent = '.articleInfo-wrap > .articleInfo > .info') {
-  var i = 0;
-  let interval = setInterval(() => {
-    i++;
-    const parentElement = document.querySelector(moutedParentEvent);
-    if (parentElement) {
-      if (!isMountedView(template, parentElement)) {
-        parentElement.appendChild(template);
-        clearInterval(interval);
-      }
-    } else if (i > 1 * 10) {  // 10 秒后清除
-      clearInterval(interval);
-    }
-  }, 1000);
-}
-/**
- * 目标是否已经挂载在页面上
- */
-function isMountedView(element, parentElement) {
-  if (element.parentNode == parentElement) {
-    return true;
-  } else {
-    return false;
-  }
+    ]
 }
 ```
+
+:::
+
+::: tab TS
+
+```tsx
+import { UserPlugins } from 'vuepress/config'
+plugins: <UserPlugins>[
+    [
+    	{
+        	name: 'custom-plugins',
+        	globalUIComponents: ["PageInfo"] // 2.x 版本 globalUIComponents 改名为 clientAppRootComponentFiles
+    	}
+    ]
+]
+```
+
+:::
+
+::::
 
 ### 站点信息配置
 
@@ -1278,6 +1431,116 @@ export function getTime(startDate, endDate) {
     }
   }
 }
+
+var bszCaller, bszTag, scriptTag, ready;
+
+var t,
+  e,
+  n,
+  a = !1,
+  c = [];
+
+// 修复Node同构代码的问题
+if (typeof document !== "undefined") {
+  (ready = function (t) {
+    return (
+      a ||
+      "interactive" === document.readyState ||
+      "complete" === document.readyState
+        ? t.call(document)
+        : c.push(function () {
+            return t.call(this);
+          }),
+      this
+    );
+  }),
+    (e = function () {
+      for (var t = 0, e = c.length; t < e; t++) c[t].apply(document);
+      c = [];
+    }),
+    (n = function () {
+      a ||
+        ((a = !0),
+        e.call(window),
+        document.removeEventListener
+          ? document.removeEventListener("DOMContentLoaded", n, !1)
+          : document.attachEvent &&
+            (document.detachEvent("onreadystatechange", n),
+            window == window.top && (clearInterval(t), (t = null))));
+    }),
+    document.addEventListener
+      ? document.addEventListener("DOMContentLoaded", n, !1)
+      : document.attachEvent &&
+        (document.attachEvent("onreadystatechange", function () {
+          /loaded|complete/.test(document.readyState) && n();
+        }),
+        window == window.top &&
+          (t = setInterval(function () {
+            try {
+              a || document.documentElement.doScroll("left");
+            } catch (t) {
+              return;
+            }
+            n();
+          }, 5)));
+}
+
+bszCaller = {
+  fetch: function (t, e) {
+    var n = "BusuanziCallback_" + Math.floor(1099511627776 * Math.random());
+    t = t.replace("=BusuanziCallback", "=" + n);
+    (scriptTag = document.createElement("SCRIPT")),
+      (scriptTag.type = "text/javascript"),
+      (scriptTag.defer = !0),
+      (scriptTag.src = t),
+      document.getElementsByTagName("HEAD")[0].appendChild(scriptTag);
+    window[n] = this.evalCall(e);
+  },
+  evalCall: function (e) {
+    return function (t) {
+      ready(function () {
+        try {
+          e(t),
+            scriptTag &&
+              scriptTag.parentElement &&
+              scriptTag.parentElement.removeChild &&
+              scriptTag.parentElement.removeChild(scriptTag);
+        } catch (t) {
+          console.log(t), bszTag.hides();
+        }
+      });
+    };
+  },
+};
+
+export function fetch() {
+  bszTag && bszTag.hides();
+  bszCaller.fetch("//busuanzi.ibruce.info/busuanzi?jsonpCallback=BusuanziCallback", function (t) {
+    bszTag.texts(t), bszTag.shows();
+  })
+};
+
+bszTag = {
+  bszs: ["site_pv", "page_pv", "site_uv"],
+  texts: function (n) {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_value_" + t);
+      e && (e.innerHTML = n[t]);
+    });
+  },
+  hides: function () {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_container_" + t);
+      e && (e.style.display = "none");
+    });
+  },
+  shows: function () {
+    this.bszs.map(function (t) {
+      var e = document.getElementById("busuanzi_container_" + t);
+      e && (e.style.display = "inline");
+    });
+  },
+};
 ```
 
 ### Vue组件创建
@@ -1344,8 +1607,7 @@ export function getTime(startDate, endDate) {
 </template>
 
 <script>
-import { dayDiff, timeDiff, lastUpdatePosts } from "../webSiteInfo/utils";
-let busuanzi; // 统计量
+import { dayDiff, timeDiff, lastUpdatePosts, fetch } from "../util/webSiteInfo";
 export default {
   data() {
     return {
@@ -1397,7 +1659,7 @@ export default {
       } else if (totalWords == "archives") {
         this.totalWords = 0;
         console.log(
-          "如果 totalWords 使用 archives，必须传入 eachFileWords，显然您并没有传入！"
+          "如果 totalWords = 'archives'，必须传入 eachFileWords，显然您并没有传入！"
         );
       } else {
         this.totalWords = totalWords;
@@ -1445,38 +1707,55 @@ export default {
      * 首页的统计量
      */
     getIndexViewCouter(iterationTime = 3000) {
-      if (busuanzi) {
-        busuanzi.fetch();
-      } else {
-        busuanzi = require("busuanzi.pure.js");
-      }
+      fetch();
       var i = 0;
       var defaultCouter = "9999";
-      // 如果 require 没有获取成功，则手动获取
-      // 但是容易产生访问量叠加，如果只需要第一次获取数据（可能获取失败），可注释掉，此内容是第一次获取失败后，重新获取访问量，可能导致访问量再次 + 1
-      // 取决于访问人的网络，以及 setTimeout 的时间（需求调节）
+      // 如果只需要第一次获取数据（可能获取失败），可注释掉 setTimeout 内容，此内容是第一次获取失败后，重新获取访问量
+      // 可能会导致访问量再次 + 1 原因：取决于 setTimeout 的时间（需求调节），setTimeout 太快导致第一个获取的数据没返回，就第二次获取，导致结果返回 + 2 的数据
       setTimeout(() => {
-        let interval = setInterval(() => {
-          const indexUv = document.querySelector(".web-site-pv");
-          const indexPv = document.querySelector(".web-site-uv");
-          if (indexPv || indexUv) {
-            i += iterationTime;
-            if (i > iterationTime * 10) {
-              indexPv.innerText = defaultCouter;
-              indexUv.innerText = defaultCouter;
-              clearInterval(interval); // 10 秒后无法获取，则取消获取
-            }
-            if (indexPv.innerText == "" && indexUv.innerText == "") {
-              // 手动获取访问量
-              busuanzi.fetch();
+        let indexUv = document.querySelector(".web-site-pv");
+        let indexPv = document.querySelector(".web-site-uv");
+        if (
+          indexPv &&
+          indexUv &&
+          indexPv.innerText == "" &&
+          indexUv.innerText == ""
+        ) {
+          let interval = setInterval(() => {
+            // 再次判断原因：防止进入 setInterval 的瞬间，访问量获取成功
+            if (
+              indexPv &&
+              indexUv &&
+              indexPv.innerText == "" &&
+              indexUv.innerText == ""
+            ) {
+              i += iterationTime;
+              if (i > iterationTime * 5) {
+                indexPv.innerText = defaultCouter;
+                indexUv.innerText = defaultCouter;
+                clearInterval(interval); // 5 次后无法获取，则取消获取
+              }
+              if (indexPv.innerText == "" && indexUv.innerText == "") {
+                // 手动获取访问量
+                fetch();
+              } else {
+                clearInterval(interval);
+              }
             } else {
               clearInterval(interval);
             }
-          } else {
+          }, iterationTime);
+          // 绑定 beforeDestroy 生命钩子，清除定时器
+          this.$once("hook:beforeDestroy", () => {
             clearInterval(interval);
-          }
-        }, iterationTime);
+            interval = null;
+          });
+        }
       }, iterationTime);
+    },
+    created() {
+      let webInfo = document.querySelector(".web-info");
+      webInfo && webInfo.parentNode.removeChild(webInfo);
     },
   },
 };
@@ -1520,7 +1799,7 @@ export default {
 </style>
 ```
 
-继续在 vdoing/components 目录下创建 `PagesView.vue` 文件，添加如下内容：
+继续在 vdoing/components 目录下创建 `PageInfo.vue` 文件，添加如下内容：
 
 ```vue
 <template>
@@ -1533,7 +1812,11 @@ export default {
     </div>
 
     <!-- 预阅读时长 -->
-    <div v-if="readingTime" title="预阅读时长" class="reading-time iconfont icon-shijian">
+    <div
+      v-if="readingTime"
+      title="预阅读时长"
+      class="reading-time iconfont icon-shijian"
+    >
       <a href="javascript:;" style="margin-left: 3px; color: #888">{{
         readingTime
       }}</a>
@@ -1552,7 +1835,7 @@ export default {
 </template>
 
 <script>
-let busuanzi;
+import { fetch } from "../util/webSiteInfo";
 export default {
   data() {
     return {
@@ -1564,76 +1847,85 @@ export default {
     };
   },
   mounted() {
-    this.$filterPosts.forEach((itemPage) => {
-      if (itemPage.path == this.$route.path) {
-        const { eachFileWords, pageView, pageIteration, readingTime } =
-          this.$themeConfig.blogInfo;
-        this.pageIteration = pageIteration;
-        if (eachFileWords) {
-          eachFileWords.forEach((itemFile) => {
-            if (itemFile.permalink == itemPage.frontmatter.permalink) {
-              this.wordsCount = itemFile.wordsCount;
-              if (readingTime || readingTime == undefined) {
-                this.readingTime = itemFile.readingTime;
-              }else {
-                this.readingTime = false;
-              }
-            }
-          });
-        }
-        this.pageView = pageView == undefined ? true : pageView;
-        if(this.pageView){
-          this.getPageViewCouter(this.pageIteration);
-        }
-        return;
-      }
-    });
+    this.initPageInfo();
   },
   watch: {
     $route(to, from) {
-      if (from.path === '/' && from.matched && from.matched.length === 0) {    // 如果页面是刷新或者第一次进入
-        // 刷新或者第一次进入不需要在这里重新获取
-      }else if (to.path !== '/' && to.path != from.path) {
-        if(this.pageView){
-          this.getPageViewCouter(this.pageIteration);
-        }
+      if (
+        to.path !== "/" &&
+        to.path != from.path &&
+        this.$themeConfig.blogInfo
+      ) {
+        this.initPageInfo();
       }
-    }
+    },
   },
   methods: {
+    /**
+     * 初始化页面信息
+     */
+    initPageInfo() {
+      this.$filterPosts.forEach((itemPage) => {
+        if (itemPage.path == this.$route.path) {
+          const { eachFileWords, pageView, pageIteration, readingTime } =
+            this.$themeConfig.blogInfo;
+          this.pageIteration = pageIteration;
+          if (eachFileWords) {
+            eachFileWords.forEach((itemFile) => {
+              if (itemFile.permalink == itemPage.frontmatter.permalink) {
+                this.wordsCount = itemFile.wordsCount;
+                if (readingTime || readingTime == undefined) {
+                  this.readingTime = itemFile.readingTime;
+                } else {
+                  this.readingTime = false;
+                }
+              }
+            });
+          }
+          this.pageView = pageView == undefined ? true : pageView;
+          if (this.pageView) {
+            this.getPageViewCouter(this.pageIteration);
+          }
+          return;
+        }
+      });
+    },
     /**
      * 文章页的访问量
      */
     getPageViewCouter(iterationTime = 3000) {
-      if (busuanzi) {
-        busuanzi.fetch();
-      } else {
-        busuanzi = require("busuanzi.pure.js");
-      }
-      var i = 0;
+      fetch();
+      let i = 0;
       var defaultCouter = "9999";
-      // 如果 require 没有获取成功，则手动获取
-      // 但是容易产生访问量叠加，如果只需要第一次获取数据（可能获取失败），可注释掉，此内容是第一次获取失败后，重新获取访问量，可能导致访问量再次 + 1
-      // 取决于访问人的网络，以及 setTimeout 的时间（需求调节）
+      // 如果只需要第一次获取数据（可能获取失败），可注释掉 setTimeout 内容，此内容是第一次获取失败后，重新获取访问量
+      // 可能会导致访问量再次 + 1 原因：取决于 setTimeout 的时间（需求调节），setTimeout 太快导致第一个获取的数据没返回，就第二次获取，导致结果返回 + 2 的数据
       setTimeout(() => {
-        let interval = setInterval(() => {
-          const pageView = document.querySelector(".view-data");
-          if (pageView) {
-            i += iterationTime;
-            if (i > iterationTime * 10) {
-              pageView.innerText = defaultCouter;
-              clearInterval(interval); // 10 秒后无法获取，则取消获取
-            }
-            if (pageView.innerText == "") {
-              // 手动获取访问量
-              busuanzi.fetch();
+        let pageView = document.querySelector(".view-data");
+        if (pageView && pageView.innerText == "") {
+          let interval = setInterval(() => {
+            // 再次判断原因：防止进入 setInterval 的瞬间，访问量获取成功
+            if (pageView && pageView.innerText == "") {
+              i += iterationTime;
+              if (i > iterationTime * 5) {
+                pageView.innerText = defaultCouter;
+                clearInterval(interval); // 5 次后无法获取，则取消获取
+              }
+              if (pageView.innerText == "") {
+                // 手动获取访问量
+                fetch();
+              } else {
+                clearInterval(interval);
+              }
             } else {
               clearInterval(interval);
             }
-          } else {
+          }, iterationTime);
+          // 绑定 beforeDestroy 生命钩子，清除定时器
+          this.$once("hook:beforeDestroy", () => {
             clearInterval(interval);
-          }
-        }, iterationTime);
+            interval = null;
+          });
+        }
       }, iterationTime);
     },
   },
@@ -1669,7 +1961,9 @@ export default {
 
 写好两个组件，那么我们需要使用它们。
 
-**首先引入 `WebInfo.vue` 组件**，打开 vdoing/components/`Home.vue` 文件。
+> 引入 `WebInfo.vue` 组件
+
+打开 vdoing/components/`Home.vue` 文件。
 
 大概在 174 行处引入 `WebInfo.vue` 组件：
 
@@ -1697,24 +1991,26 @@ components: { ......, WebInfo },
 
 ![image-20220110215531954](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/%E5%85%B3%E4%BA%8E/%E5%85%B3%E4%BA%8E%E6%9C%AC%E7%AB%99/20220110215533.png)
 
-**接着引入 `PagesView.vue` 组件**，打开 vdoing/components/`ArticleInfo.vue` 文件。
+> 引入 `PageInfo.vue` 组件
+
+打开 vdoing/components/`ArticleInfo.vue` 文件。
 
 大概在 67 行处引入 `PagesView.vue` 组件：
 
 ```js
-import PagesView from './PagesView.vue';
+import PageInfo from './PageInfo.vue';
 ```
 
-大概在 69 行处添加 `components` 注册该组件：
+大概在 69 行处添加 `components` 注册该组件（`data()` 上方）：
 
 ```js
-components: { PagesView },
+components: { PageInfo },
 ```
 
 大概在 61 行处，添加如下内容：
 
 ```js
-<PagesView style="margin-left: 0" />
+<PageInfo style="margin-left: 0" />
 ```
 
 效果图：
