--- a/docs/90.私密文章测试/01.全局私密文章测试.md
+++ b/docs/90.私密文章测试/01.全局私密文章测试.md
@@ -3,9 +3,6 @@ title: 全局私密文章测试
 date: 2022-01-07 17:00:36
 permalink: /private/test1/
 private: true
-username: vdoing
-password: 123456
-expire: 60000
 titleTag: 测试
 categories: 
   - 测试
@@ -23,7 +20,7 @@ private: true     # 开启文章私密，必须
 ---
 ```
 
-此时在 themeConfig 里的用户名和密码生效。
+此时在 themeConfig 里的管理员用户名和密码或者 loginInfo 里的用户名和密码生效。
 
 如果您想单独给一个文章设为私密，则请访问 [单个私密文章测试](/private/test2/)
 
