--- a/docs/99.Vdoing私密文章登录.md
+++ b/docs/99.Vdoing私密文章登录.md
@@ -14,9 +14,12 @@ editLink: false
   <Login/>
 </ClientOnly>
 
-如果你是 <mark>全局私密文章测试 </mark> 或者 <mark>单个私密文章测试</mark> 进来的，那么登录信息为：
+如果你是 <mark>全局私密文章测试</mark> 或者 <mark>单个私密文章测试</mark> 进来的，那么登录信息为：
 
 - 全局私密文章测试：用户名为 `vdoing`，密码为 `123456`
-- 单个私密文章测试：用户名为 `vdoing`，密码为 `123`
+- 单个私密文章测试：
+  - 用户名为 `vdoing`，密码为 `123`
+  - 用户名为 `1`，密码为 `1`
+  - 用户名为 `2`，密码为 `2`
 
-内置五个异步弹窗提示：不输入用户名和密码、只输入两者中的一个、用户名或密码错误、用户名和密码正确。
+私密文章模块内置五个异步弹窗提示：不输入用户名和密码、只输入两者中的一个、用户名或密码错误、用户名和密码正确。
