--- a/docs/90.私密文章测试/03.单个私密文章测试.md
+++ b/docs/90.私密文章测试/03.单个私密文章测试.md
@@ -5,8 +5,12 @@ permalink: /private/test2/
 titleTag: 测试
 private: true
 username: vdoing
-password: 123
-expire: 60000
+password: 123456
+expire: 7h
+loginInfo: [
+  {username: '1', password: '1'},
+  {username: '2', password: '2'},
+]
 categories: 
   - 测试
 tags: 
@@ -21,27 +25,37 @@ tags:
 ```yml
 ---
 private: true     # 开启文章私密，必须
-username: vdoing  # 用户名，必须
-password: 123456  # 密码，必须
-expire: 60000     # 登录状态超时清除时间，可选（不填则以全局超时时间为准，如果全局没有设置，则默认是一天）
+username: vdoing  # 用户名
+password: 123456  # 密码
+expire: 7h     # 登录状态超时清除时间，可选（不填则以全局超时时间为准，如果全局没有设置，则默认是一天）
+loginInfo: [   # 多组用户名密码登录
+  {username: '1', password: '1'},
+  {username: '2', password: '2'},
+]
 ---
 ```
 
-此时该文章使用 themeConfig 里的用户名和密码 **不会生效**。仅仅该 frontmatter 的用户名和密码 **生效**。
+此时该文章使用 themeConfig 里的 loginInfo 信息登录 **不会生效**。仅仅该 frontmatter 的用户名和密码或者管理员用户名和密码 **生效**。
+
+如果您想全局给一个文章设为私密，则请访问 [全局私密文章测试](/private/test1/)
 
 本文章的全部 frontmatter 内容：
 
 ```yml
 ---
-title: 单独私密文章测试
+title: 单个私密文章测试
 date: 2022-01-07 17:01:37
 permalink: /private/test2/
 titleTag: 测试
 private: true
 username: vdoing
 password: 123456
-expire: 60000
-categories:
+expire: 7h
+loginInfo: [
+  {username: '1', password: '1'},
+  {username: '2', password: '2'},
+]
+categories: 
   - 测试
 tags: 
   - 
